fixed some bugs in nodejs and added correct detection of running ros - corrected inverse dynamics controller, but it still outputs nan if it runs too long

--- a/main_ros2/nodejs_ros2_gui/public/css/style.css
+++ b/main_ros2/nodejs_ros2_gui/public/css/style.css
@@ -203,7 +203,7 @@ input[type="text"]:focus {
 }
 
 /* Status Text Styling */
-#connected, #labcon {
+#connected, #labcon, #statuscon {
     font-weight: bold; /* Make the status text bold */
     color: white; /* White text for visibility */
 }
